# UltimateSprintReport

./: .env  .gitignore  ORIGINAL_CODE copy.py  ORIGINAL_CODE.py  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pylint.yml
src/: UltimateJiraSprintReport.py  UltimateSprintReport.py  __init__.py  main.py
src/UltimateJiraSprintReport/: UltimateJiraSprintReport.py  __init__.py
src/UltimateJiraSprintReport.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/UltimateJiraSprintReport/functions/: _burndown.py  _epic_statistics.py  _predictability.py  _sprint_details.py  _status_report.py  burndown.py  epic_statistics.py  predictability.py  sprint_details.py
src/UltimateJiraSprintReport/models/: _data_point.py
src/UltimateJiraSprintReport/plugins/: plugin.py  plugin_register.py
src/UltimateJiraSprintReport/reporter/: _report1.py  _report2.py  _show_burndown_chart.py  _show_burndown_table.py  _show_committed_vs_planned.py  _show_committed_vs_planned_chart.py  _show_epic_statistics.py  _show_login_details.py  _show_predictability.py  _show_report.py  _show_sprint_details.py  _show_sprint_issue_types_statistics.py  _show_sprint_predictability.py  _show_sprint_status_table.py  _show_sprint_test_case_statistics.py  report1.py  report2.py  reporter.py
src/UltimateJiraSprintReport/services/: _jira_service.py  jira_service.py
src/UltimateJiraSprintReport/utils/: _http_utils.py  _pandas_utils.py  _predictability_utils.py  pandas_utils.py
src/UtlimateJiraSprintReport/: UltimateJiraSprintReport.py  __init__.py
src/UtlimateJiraSprintReport/functions/: _epic_statistics.py  _predictability.py  _sprint_details.py
src/UtlimateJiraSprintReport/models/: _data_point.py
src/functions/: burndown.py  epic_statistics.py  predictability.py  sprint_details.py
src/models/: data_point.py
src/reporter/: report2.py  reporter.py
src/services/: _jira_service.py  jira_service.py
src/utils/: helpers.py  http_utils.py  pandas_utils.py  predictability_utils.py  utils.py
tests/: __testing__.py  test_main.py  test_plugin.py  test_report.py  test_utils.py
(+8 files in other folders)
