[project]
name = "UltimateJiraSprintReport"
version = "1.0.0"
authors = [
  { name = "Mike B", email = "mike@7ft10.com" }
]
description = "A library for generating sprint reports from Jira data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = ['atlassian-python-api', 'matplotlib', 'numpy', 'pandas', 'tqdm']

[project.urls]
Homepage = "https://github.com/maddogmikeb/UltimateJiraSprintReport"
Issues = "https://github.com/maddogmikeb/UltimateJiraSprintReport/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
